2007-11-08  Matthias Clasen <mclasen@redhat.com>

	Merge from trunk:

	* configure.in:
	* m4macros/glib-2.0.m4: Require pkg-config 0.16 in configure
	and in AM_PATH_GLIB_2_0 to be consistent with the use of
	PKG_PROG_PKG_CONFIG which was introduced in 0.16.  (#418778,
	Loïc Minier)

2007-11-08  Matthias Clasen <mclasen@redhat.com>

	Merge from trunk:

	* glib/gstrfuncs.c (g_parse_long_long): Don't leave
	out parameters uninitialized.  (#490061, Benjamin Otte)

2007-11-07  Matthias Clasen <mclasen@redhat.com>

	=== Branch for 2.14 ===

2007-11-07  Matthias Clasen <mclasen@redhat.com>

	* glib/gspawn.c (g_spawn_async_with_pipes): Slightly improve
	the wording of the docs.  (#492677, Areg Beketovski)

2007-11-07  Matthias Clasen <mclasen@redhat.com>

	* glib/pcre/Makefile.am: Add an include to fix builddir != srcdir
	builds.  (#494602, Yevgen Muntyan)

2007-11-07  Tor Lillqvist  <tml@novell.com>

	* glib/update-pcre/notdll.patch: Not needed, just use -DPCRE_STATIC.

	* glib/update-pcre/Makefile.am: Drop notdll.patch.

	* glib/update-pcre/Makefile.am-1
	* glib/update-pcre/update.sh
	* glib/pcre/Makefile.am
	* glib/Makefile.am: Use -DPCRE_STATIC.

	* tests/gio-test.c
	* tests/mainloop-test.c
	* tests/spawn-test.c: #define pipe(fds) _pipe(fds, 4096,
	_O_BINARY) on Windows

	* tests/regex-test.c (test_expand): Don't print NULL with %s.

2007-11-07  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.14.3 ===

	* NEWS: Updates

2007-11-06  Matthias Clasen <mclasen@redhat.com>

	* glib/pcre/*: Update the internal copy of PCRE to 7.4

2007-10-22  Tor Lillqvist  <tml@novell.com>

	* glib/gutils.c (_glib_gettext): Plug small one-time leak on
	Windows. (#488068, Daniel Atallah)

2007-10-21  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gdate.c (g_date_strftime):
	* glib/gmain.c (g_main_context_check):
	* glib/gregex.c (g_match_info_fetch_all), (g_regex_split_full):
	* glib/gthread.c (g_once_init_enter_impl), (g_once_init_leave):